# lib/api-spec/openapi.yaml
@@ -120,6 +120,10 @@ paths:
           in: query
           schema:
             type: string
+        - name: equipmentId
+          in: query
+          schema:
+            type: string
       responses:
         "200":
           description: Alerts list
